--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
-    <h3>If you also love physics and technology.</h3>
+    <h3 style="margin-bottom:40px;">If you also love physics and technology.</h3>
     <p>Let's talk something interesting about technology and physics.</p>
     <a class="btn" href="mailto:name@email.com">contact</a>
   </div>
