--- a/index.html
+++ b/index.html
@@ -32,14 +32,19 @@
     <div class="skill-row">
       <img class="skills_img" src="images\computer.png" alt="icon">
       <h3>web development and design</h3>
-      <p>I love developing web application. 
-	  For back-end, I love to use java. For front-end, I know html, css and bootstrap.</p>
+      <p>I am a full stack web developer.<br> 
+	 I know Spring and have working<br>knowldge of J2EE.<br>
+	 I also know HTML, CSS, JS<br> and some framework as Jquery, Bootstrap.<br> </p>
     </div>
     <div class="skill-row">
       <img class="technology_img" src="images\technology.png" alt="skill icon">
       <h3>Additional Skills</h3>
-      <p>I have 5 years experince of working with windows and linux. I know git, github, maven.
-	  I use eclipse and intellij as java id for more than 2 years.</p>
+      <p>I can teach you Bhogpuri.<br>
+	 I know core python.<br>
+	 I have taught Physics for<br> 
+	 2years.<br>
+	 I'm also a good Cricketer<br>
+	 and a Kabaddi player.</p>
     </div>
   </div>
   <hr>
@@ -47,7 +52,7 @@
     <h2>Get In Touch</h2>
     <h3 style="margin-bottom:40px;">If you also love physics and technology.</h3>
     <p>Let's talk something interesting about technology and physics.</p>
-    <a class="btn" href="mailto:name@email.com">contact</a>
+    <a class="btn" href="mailto:udaysah098@gmail.com">contact</a>
   </div>
 </div>
 
@@ -56,7 +61,7 @@
   <p><strong>Telegram: 8873340698</strong></P>
    <p><strong>Email: udaysah098@gmail.com</strong></P>
   <a class="footer-link" href="">Website</a>
-  <p class="copyright">© 2021 Uday Sahoo.</p>
+  <p class="copyright">© 2021-2022 Uday Sahoo.</p>
 </div>
 
 
