--- a/index.html
+++ b/index.html
@@ -31,21 +31,25 @@
     <h2>My Skills.</h2>
     <div class="skill-row">
       <img class="skills_img" src="images\computer.png" alt="icon">
+	    <div class="skill-des">
       <h3>web development and design</h3>
       <p>I am a full stack web developer.<br> 
 	 I know Spring and have working<br>knowldge of J2EE.<br>
 	 I also know HTML, CSS, JS<br> and some framework as Jquery, Bootstrap.<br> </p>
     </div>
+  </div>
     <div class="skill-row">
       <img class="technology_img" src="images\technology.png" alt="skill icon">
-      <h3>Additional Skills</h3>
+     <div class="skill-des">
+	    <h3>Additional Skills</h3>
       <p>I can teach you Bhogpuri.<br>
 	 I know core python.<br>
-	 I have taught Physics for<br> 
+	 I have taught Physics for 
 	 2years.<br>
 	 I'm also a good Cricketer<br>
 	 and a Kabaddi player.</p>
     </div>
+   </div>
   </div>
   <hr>
   <div class="contact-me">
