--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
   <div class="skills">
   <hr>
     <h2>My Skills.</h2>
-    <div class="skill-row">
-      <img class="skills_img" src="images\computer.png" alt="icon">
-	    <div class="skill-des">
+    <div class="skill-row" >
+	
+      <img id="computer" class="skills_img" src="images\computer.png" alt="icon">
+	  
+	 <div class="skill-des1" id="first-skill-row">
       <h3>web development and design</h3>
       <p>I am a full stack web developer.<br> 
 	 I know Spring and have working<br>knowldge of J2EE.<br>
